2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
	  fd_timed_write_iov): Replaced call to fd_is_nonblocking() with
	  "do_skip_first_poll" parm.  This eliminates the overhead of a
	  function call and fcntl() at the expense of an additional function
	  arg to determine whether the fd is nonblocking.  The old behavior
	  can be preserved by passing "fd_is_nonblocking(fd)" for the new arg.
	* src/libcommon/fd.h: Updated prototypes.
	* src/libcommon/m_msg.c (m_msg_send):
	  Updated call to fd_timed_write_iov().
	* src/libcommon/m_msg.c (m_msg_recv):
	  Updated call to fd_timed_read_n().

	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
	  fd_timed_write_iov): Added optimization to skip the poll() on the
	  first iteration of the loop for nonblocking sockets.  This helps the
	  case where the read or write can complete immediately and in a single
	  invocation, thereby eliding the overhead of gettimeofday() + poll().
	  This is safe for nonblocking sockets since the loop already handles
	  EAGAIN to continue with the next iteration of the loop.

	* src/libcommon/fd.h: Tweaked function comment wrt "nonblocking".

	* src/libcommon/fd.c: Tweaked var def spacing.

	* src/libcommon/fd.c (fd_write_n, fd_timed_write_n):
	  Changed "buf" arg type to const.
	* src/libcommon/fd.h: Updated prototypes.

2011-01-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c: Tweaked spacing.

	* src/libcommon/fd.c (fd_timed_write_iov): Fixed compiler warning for
	  "pointer of type ‘void *’ used in arithmetic".

	* src/libcommon/fd.c: Tweaked comment headers.

2010-10-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c (job_accept): Prevented continued execution of
	  function if unable to set server's socket to client as nonblocking.

	* src/libmunge/m_msg_client.c (_m_msg_client_connect):
	  Fixed fd leak if unable to set client's socket as nonblocking.
