@@ -1,6 +1,12 @@
 2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
+	  fd_timed_write_iov): Initialized msecs to -1 when do_skip_first_poll
+	  is enabled.  This eliminates the overhead of _fd_get_poll_timeout()
+	  when the read or write can complete in a single invocation, at the
+	  expense of 2 reads or writes when the poll timeout is 0.
+
+	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
 	  fd_timed_write_iov): Replaced call to fd_is_nonblocking() with
 	  "do_skip_first_poll" parm.  This eliminates the overhead of a
 	  function call and fcntl() at the expense of an additional function
